--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prisma": "^7.4.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "resend": "^6.9.2",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
