feat: dark theme + mobile responsive sidebar across all dashboard components

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
-    "postinstall": "prisma generate",
+    "build": "node scripts/prisma-stub-fix.js && prisma generate && next build",
+    "postinstall": "node scripts/prisma-stub-fix.js && prisma generate",
     "start": "next start",
     "lint": "eslint"
   },
@@ -20,7 +20,6 @@
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "next-auth": "^5.0.0-beta.30",
-    "prisma": "^6.19.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "resend": "^6.9.2",
@@ -35,6 +34,7 @@
     "@types/uuid": "^10.0.0",
     "eslint": "^10.0.1",
     "eslint-config-next": "^0.2.4",
+    "prisma": "^7.4.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
